V7.0.65    
#####################################
1. Enable portfolios for investors
2. Increased bank name to 100 chars
3. force_units for currency to enable fund specific numbers


22/12/2023 - V7.0.25    
#####################################
1. Made boolean fields in documents mandatory with defaults
2. Search documents for approval, email - bulk actions


22/12/2023 - V7.0.22    
#####################################
1. Refactored esign code, multiple esing emails, no users required
2. Added primary email to investor and entity
3. Call not visible to investors



15/12/2023 - V7.0.20    
#####################################
1. Added labels for Custom fields
2. Changing FCF name, causes data in models to changes
3. Upgraded to Sidekiq 7 for capsule functionality



13/12/2023 - V7.0.19
#####################################
1. Enable selection of template name for commitment doc gen
2. Enable download of documents uploaded for custom files 
3. Notification of KYC update to fund employees

08/12/2023 - V7.0.17
#####################################
1. Custom form fields name lenght to 100
2. Added other text field to esignatures
3. 

08/12/2023 - V7.0.13
#####################################
1. Added filters for IAs
2. Fixed stock adjustment computation
3. Added cc to IA
4. Added Custom notifications
5. Add cc override in Fund
6. Fund Unit reports
7. Approval for individual document
8. Better notifications in doc generator


07/12/2023 - V7.0.12
#####################################
1. KYCs UI changes
2. Face Val For Redemption included in KYC uncalled amount
3. Using FormCard across all forms
4. Formula Rerun


04/12/2023 - V7.0.11
#####################################

1. Added WA enabled to entity
2. Better Individual/Non I KYCs
3. Changed client side validations
4. Enabled file validations for forms in wizard


02/12/2023 - V7.0.10
#####################################

#### Bugs
1. Fixed bugs for import investor advisor