@@ -28,7 +28,7 @@
   </span>
 </div>
 
-<div class="table-responsive" data-controller="datatable">
+<div class="table-responsive" data-controller="datatable" data-datatable-money-columns-value="3,5,6,7">>
   <table id="portfolio_investments" class="table table-bordered dataTable jqDataTable">
     <thead>
       <tr>
